# django-template

./: .docker.env  .gitignore  .tests.env  Dockerfile  Makefile  README.md  docker-compose.yaml  gunicorn.conf.py  hello.py  manage.py  pyproject.toml
.github/: dependabot.yml
core/: settings.py  urls.py  views.py
core/settings/: base.py  local.py  production.py
custom_auth/: backend.py  forms.py  urls.py  views.py
static/js/: auth-validation.js  password-rules.js
templates/: base.html  home.html
templates/account/: login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  signup.html
templates/account/snippets/: google_button.html
templates/include/: navbar.html
templates/includes/: navbar.html
templates/socialaccount/: login.html
tests/test_views/: test_healthcheck.py
