[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "A template repository for Django projects"
authors = ["Marcelo Lino <mdslino@gmail.com>"]
readme = "README.md"
packages = [{ include = "django_template" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
gunicorn = "^22.0.0"
python-decouple = "^3.8"
gevent = "^23.9.1"
django-health-check = "^3.17.0"
dj-database-url = "^2.1.0"
psycopg = { extras = ["binary", "pool"], version = "^3.1.12" }
django-structlog = "^8.1.0"
django-extensions = "^3.2.3"


[tool.poetry.group.test.dependencies]
pytest-dotenv = "^0.5.2"
pytest-django = "^4.7.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"
pytest-sugar = "^1.0.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
ruff = "^0.4.9"
django-debug-toolbar = "^4.4.2"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = 'py311'
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest]
env_files = [
    ".tests.env"
]
DJANGO_SETTINGS_MODULE = "core.settings.tests"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.tests"
env_files = [
    ".tests.env"
]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
