[project]
name = "django-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.2.0",
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-health-check>=3.18.3",
    "django-structlog>=8.1.0",
    "django-widget-tweaks>=1.5.0",
    "django>=5.1.2",
    "gevent>=24.10.3",
    "gunicorn>=23.0.0",
    "markdown>=3.7",
    "psycopg[binary,pool]>=3.2.3",
    "python-decouple>=3.8",
    "requests>=2.32.3",
    "djangorestframework>=3.15.2",
]

[tool.uv]
dev-dependencies = [
    "django-debug-toolbar>=4.4.6",
    "mypy>=1.12.0",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = 'py311'
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest]
env_files = [
    ".tests.env"
]
DJANGO_SETTINGS_MODULE = "core.settings.tests"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.tests"
env_files = [
    ".tests.env"
]
